--- a/html/login.html
+++ b/html/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/login.css">
-    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/navbar.css">
     <title>Login</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
 
     </div>
     <div class="container">
-        <img src="./images/login.png" width="200" height="200" alt="login image"  >
+        <img src="../images/login.png" width="200" height="200" alt="login image"  >
         <h1 style="text-align: center;">Log In</h1>
         <form id="login-form">
             <input type="email" id="email" name="email" placeholder="Email" required>
